--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
         <div class="bottom">
           <img
            src="img1.jpg" 
-           alt="" 
+           alt=""
+           class="img-a" 
            />
           <img 
           src="img 2.jpg" 
           alt="" 
+          class="img-a"
           />
           <img
            src="img3.jpg" 
            alt="" 
+           class="img-a"
            />
         </div>
       </section>
