setting the grid templates areas

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
           <img 
           src="img 2.jpg" 
           alt="" 
-          class="img-a"
+          class="img-b"
           />
           <img
            src="img3.jpg" 
            alt="" 
-           class="img-a"
+           class="img-c"
            />
         </div>
       </section>
