--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
         </div>
         <div class="bottom">
           <div class="images">
-              <img
-                src="https://images.unsplash.com/photo-1514315384763-ba401779410f?q=80&w=1966&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt=""
-                class="img-a"
-              />
-              <img src="img 2.jpg" alt="" class="img-b" />
-              <img src="img3.jpg" alt=""  class="img-c"/>
+            <div class="img-a">
+                <img src="https://images.unsplash.com/photo-1514315384763-ba401779410f?q=80&w=1966&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" />                               
+            </div>
+            <div class="img-b">
+                <img src="img 2.jpg" alt=""  />
+            </div>
+            <div class="img-c">
+                <img src="img3.jpg" alt=""  />
+            </div>
+             
           </div>
         </div>
       </section>
